--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
+    "react-spinners": "^0.17.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
